WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310130
AX: After interacting out of a remote frame, VoiceOver sometimes cannot progress forwards or backwards with VO-Left / VO-Right
https://bugs.webkit.org/show_bug.cgi?id=310130
Summary
AX: After interacting out of a remote frame, VoiceOver sometimes cannot progr...
Tyler Wilcock
Reported
2026-03-17 12:57:08 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-17 12:57:14 PDT
<
rdar://problem/172768578
>
Tyler Wilcock
Comment 2
2026-03-17 13:04:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60800
EWS
Comment 3
2026-03-17 22:17:20 PDT
Committed
309450@main
(41524d97b39b): <
https://commits.webkit.org/309450@main
> Reviewed commits have been landed. Closing PR #60800 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug